name:                haskell-ninety-nine
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.markdown
homepage:            http://github.com/efulmer/haskell-ninety-nine#readme
license:             BSD3
license-file:        LICENSE
author:              Eric R. Fulmer
maintainer:          eric.r.fulmer@gmail.com
copyright:           2016 Eric R. Fulmer
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
                     , containers
                     , safe
  default-language:    Haskell2010

executable haskell-ninety-nine-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , safe
                     , haskell-ninety-nine
  default-language:    Haskell2010

test-suite haskell-ninety-nine-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , containers
                     , QuickCheck
                     , safe
                     , haskell-ninety-nine
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/efulmer/haskell-ninety-nine
